--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <a class="button primary-button" href="https://taillour-demo.myshopify.com" onclick="demoNotes.showModal();return false;" rel="nofollow">View demo store</a>
         </span>
         <span>
-          <a class="button secondary-button" href="#">Download</a>
+          <a class="button secondary-button" href="https://github.com/ketanmistry/taillour-theme">Download</a>
         </span>
       </div>
     </section>
@@ -163,7 +163,7 @@
                 <p>Adding new features to pre-made themes is incredibly messy and very difficult as the code base is crowded with settings and nested snippets. And, a lot of these themes have some useful features missing that I'd built for clients in the past.</p>
                 <p>I became increasingly frustrated with working on these themes, so I decided to create Taillour, a theme made especially for web designers and developers.</p>
                 <p>
-                  <a class="button primary-button" href="#">
+                  <a class="button primary-button" href="https://github.com/ketanmistry/taillour-theme">
                     Download
                   </a>
                 </p>
@@ -467,7 +467,7 @@
     <section class="hr-section section-wrap unpadded">
       <div class="squiggle squiggle-with-buttons">
         <span>
-          <a class="button secondary-button" href="#">Download</a>
+          <a class="button secondary-button" href="https://github.com/ketanmistry/taillour-theme">Download</a>
         </span>
       </div>
     </section>
@@ -532,7 +532,7 @@
     <div>
       <div id="footer-copyright">
         <div class="container small-text center">
-          Made by <a href="https://iamketan.design" target="_blank">Ketan Mistry</a> | <a href="#">License</a>
+          Made by <a href="https://iamketan.design" target="_blank">Ketan Mistry</a> | <a href="https://github.com/ketanmistry/taillour-theme">MIT License</a>
         </div>
       </div>
     </div>
