--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="stylesheet" href="assets/mobile.css" media="(max-width: 768px)">
   <script src="assets/theme.js"></script>
+
+  <script defer data-domain="taillourtheme.com" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
