--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="image-text-content">
               <div class="rte">
                 <h2 data-title="Why use a boilerplate theme?">Why use a boilerplate theme?</h2>
-                <p>I've worked on a lot of Shopify stores, some built from scratch for my clients, and some where I've been asked to add certain functionality to on pre-made themes.</p>
+                <p><a href="https://iamketan.design" target="_blank" title="Ketan Mistry">I've</a> worked on a lot of Shopify stores, some built from scratch for my clients, and some where I've been asked to add certain functionality to on pre-made themes.</p>
                 <p>Adding new features to pre-made themes is incredibly messy and very difficult as the code base is crowded with settings and nested snippets. And, a lot of these themes have some useful features missing that I'd built for clients in the past.</p>
                 <p>I became increasingly frustrated with working on these themes, so I decided to create Taillour, a theme made especially for web designers and developers.</p>
                 <p>
