--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <title>Taillour: A Shopify 2.0 Boilerplate Theme</title>
-  <meta name="description" content="Taillour is a free Shopify 2.0 boilerplate theme with all the core templates and sections, and some extra features. Use it as a starting point for your next build.">
+  <meta name="description" content="Taillour is a free Shopify 2.0 boilerplate theme with all the essential templates and sections, plus some extra features. Use it as a starting point for your next build.">
 
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="stylesheet" href="assets/mobile.css" media="(max-width: 768px)">
@@ -103,7 +103,7 @@
 
       <div id="template--18451020054760__text_tDKwp3" class="section-wrap">
         <div class="section center rte">
-          <p>Taillour is a <strong>boilerplate theme</strong> that's quick to build <strong>custom-designed stores</strong> with. Design without limitations. Build without restrictions.</p>
+          <p>Taillour is a <strong>boilerplate theme</strong> that's quick to build <strong>custom-designed stores</strong> with. Use it as a starting point for your next project.</p>
         </div>
       </div>
     </section>
@@ -127,22 +127,16 @@
           <div class="grid-2 middle image-text-right">
             <div class="image-text-content">
               <div class="rte">
-                <h2 data-title="What is a boilerplate theme?">What is a boilerplate theme?</h2>
-                <p>Taillour is a <strong>Shopify 2.0 boilerplate theme</strong> built for Shopify web designers who want a theme that:</p>
-                <ol>
-                  <li>Is easy to work with and is a nice "clean slate" to start your client's Shopify theme build with using <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> and <strong>Liquid</strong>.</li>
-                  <li>Can be customised to match their client's brand/visual identity more accurately.</li>
-                  <li>Doesn't over-complicate key features, like the variant selector, so they can be modified easily.</li>
-                  <li>Contains <strong>bonus features</strong>, such as "<strong>purchased together</strong>", that are useful for all online stores.</li>
-                </ol>
-                <p>
-                  <strong>Taillour contains the key templates, sections and features, each with a handful of useful settings. It gives you the flexibility to expand on them, giving you exactly what you need.</strong></p>
+                <h2 class="align-left">What is a boilerplate theme?</h2>
+                <p>Taillour is a <strong>Shopify 2.0 boilerplate theme</strong> built for web designers who want a theme that's easy to build custom stores with.</p>
+                <p>This type of theme is sometimes called a <em class="bold">"Skeleton theme"</em>.</p>
+                <p>Taillour contains the essential templates, sections and features, each with a handful of useful settings. It gives you the flexibility to expand on them, giving you exactly what you need for your custom store.</p>
               </div>
             </div>
 
             <div class="image-text-asset">
               <div>
-                <img src="assets/screenshot3@2x.png" width="1024" height="1024" alt="">
+                <img src="assets/screenshot4@2x.png" width="1024" height="1024" alt="Screenshot of product page.">
               </div>
             </div>
           </div>
@@ -154,18 +148,17 @@
       <div class="section-wrap" style="color:inherit;">
         <div class="section">
           <div class="grid-2 middle image-text-left">
-            <div class="image-text-asset">
+            <div class="image-text-asset" data-device="desktop">
               <div>
-                <img src="assets/screenshot2@2x.png" width="1024" height="1024" alt="">
+                <img src="assets/screenshot2@2x.png" width="1024" height="1024" alt="Screenshot of code editor with file from theme open.">
               </div>
             </div>
 
             <div class="image-text-content">
               <div class="rte">
-                <h2 data-title="Why use a boilerplate theme?">Why use a boilerplate theme?</h2>
-                <p><a href="https://iamketan.design" target="_blank" title="Ketan Mistry">I've</a> worked on a lot of Shopify stores, some built from scratch for my clients, and some where I've been asked to add certain functionality to on pre-made themes.</p>
-                <p>Adding new features to pre-made themes is incredibly messy and very difficult as the code base is crowded with settings and nested snippets. And, a lot of these themes have some useful features missing that I'd built for clients in the past.</p>
-                <p>I became increasingly frustrated with working on these themes, so I decided to create Taillour, a theme made especially for web designers and developers.</p>
+                <h2 class="align-left">Why use a boilerplate theme?</h2>
+                <p>Retrofitting new features to pre-made themes is incredibly messy and difficult as the codebase is overcrowded with template settings, nested snippets and components.</p>
+                <p>And, most themes aren't made for customising.</p>
                 <p>
                   <a class="button primary-button" href="https://github.com/ketanmistry/taillour-theme">
                     <svg class="icon" width="24px" height="24px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path class="st0" d="M256,32C132.3,32,32,134.8,32,261.7c0,101.5,64.2,187.5,153.2,217.9c11.2,2.1,15.3-5,15.3-11.1   c0-5.5-0.2-19.9-0.3-39.1c-62.3,13.9-75.5-30.8-75.5-30.8c-10.2-26.5-24.9-33.6-24.9-33.6c-20.3-14.3,1.5-14,1.5-14   c22.5,1.6,34.3,23.7,34.3,23.7c20,35.1,52.4,25,65.2,19.1c2-14.8,7.8-25,14.2-30.7c-49.7-5.8-102-25.5-102-113.5   c0-25.1,8.7-45.6,23-61.6c-2.3-5.8-10-29.2,2.2-60.8c0,0,18.8-6.2,61.6,23.5c17.9-5.1,37-7.6,56.1-7.7c19,0.1,38.2,2.6,56.1,7.7   c42.8-29.7,61.5-23.5,61.5-23.5c12.2,31.6,4.5,55,2.2,60.8c14.3,16.1,23,36.6,23,61.6c0,88.2-52.4,107.6-102.3,113.3   c8,7.1,15.2,21.1,15.2,42.5c0,30.7-0.3,55.5-0.3,63c0,6.1,4,13.3,15.4,11C415.9,449.1,480,363.1,480,261.7   C480,134.8,379.7,32,256,32z" fill="white"/></g></svg>
@@ -179,39 +172,29 @@
       </div>
     </section>
 
-    <section class="heading-section">
-      <div class="section-wrap">
-        <div class="section unpadded center">
-          <h2 class="nomargin" data-title="What you can do with Taillour">What you can do with Taillour</h2>
-        </div>
-      </div>
-    </section>
-
     <section class="columns-section">
       <div class="section-wrap" style="color:inherit;">
+        <div class="section center" style="margin-top: 5rem;">
+          <h2>What you can do with Taillour?</h2>
+        </div>
+
         <div class="section column-section">
           <div>
-            <h3 data-title="Integrate your own design">
-              Integrate your own design
-            </h3>
+            <h3>Integrate your own design</h3>
             <div class="rte">
               <p>Design your client's store exactly as you need and on-brand. You can create your own layouts using the tools you're already used to.</p>
             </div>
           </div>
           <div>
-            <h3 data-title="Build new features easily">
-              Build new features easily
-            </h3>
+            <h3>Add new features easily</h3>
             <div class="rte">
-              <p>Develop the features you need without having to worry about conflicting code. Taillour is coded simple, so you can extend as required without having to forage through countless files.</p>
+              <p>Add the features you need without having to worry about conflicting code. Taillour is coded simple, so you can extend as required without having to forage through countless nested files.</p>
             </div>
           </div>
           <div>
-            <h3 data-title="Extract the features you need">
-              Extract the features you need
-            </h3>
+            <h3>Only use the features you need</h3>
             <div class="rte">
-              <p>Already have a theme in use? No problem, you can take the features you need from Taillour and integrate them into your existing theme.</p>
+              <p>Every project is different, so you can build your client's store based on what is needed, keeping things clean and simple for you and your client.</p>
             </div>
           </div>
         </div>
@@ -222,31 +205,11 @@
       <div class="squiggle"></div>
     </section>
 
-    <section id="shopify-section-template--18451020054760__heading_XtRjyC" class="heading-section">
-      <div class="section-wrap">
-        <div class="section unpadded center">
-          <h2 class="nomargin" data-title="Features">Features</h2>
-        </div>
-      </div>
-
-
-    </section>
     <section id="shopify-section-template--18451020054760__text_HpPBfR" class="text-section">
-      <style>
-        #template--18451020054760__text_HpPBfR .rte {
-          font-size: 1.5rem;
-        }
-
-        #template--18451020054760__text_HpPBfR .rte p,
-        #template--18451020054760__text_HpPBfR .rte ul,
-        #template--18451020054760__text_HpPBfR .rte ol {
-          line-height: 2.5rem;
-        }
-      </style>
-
       <div  class="section-wrap">
         <div class="section center rte" style="max-width:768px;">
-          <p style="font-size:1.5rem;line-height: 2.5rem;">Taillour is a complete installable <strong>boilerplate theme</strong> that comes with common section templates and features that you can customise to your projects requirements. With these basics you can take your code and store to the next level. It also comes with some additional features like:</p>
+          <h2>Features</h2>
+          <p style="font-size:1.5rem;line-height: 2.5rem;">Taillour is an installable <strong>boilerplate theme</strong> that comes with common section templates and features that you can customise to your projects requirements. And, it comes with some additional features.</p>
         </div>
       </div>
     </section>
@@ -444,7 +407,7 @@
               Built-in contact form
             </h3>
             <div class="rte">
-              <p>The built-in contact form section allows you to create as many forms as you need, all with custom form fields.</p>
+              <p>The built-in contact form section allows you to create as many forms as you need, all with customisable form fields.</p>
             </div>
           </div>
 
@@ -484,16 +447,23 @@
       <div class="section-wrap" style="color:inherit;">
         <div class="section">
           <div class="center">
-            <h2 data-title="Frequently Asked Questions">
-              Frequently Asked Questions
-            </h2>
+            <h2>Frequently Asked Questions</h2>
           </div>
         </div>
         <div class="section">
+          <details open>
+            <summary>Who made this?</summary>
+            <div class="rte">
+              <p>👋🏽 I'm Ketan, a British <a href="https://iamketan.design" target="_blank">Ecommerce Consultant</a> living in Queensland, Australia.</p>
+              <p>I built Taillour to make things easier for myself when building stores for my clients.</p>
+              <p>I've made Taillour available to everyone, and if you've found it helpful, please do let me know (or <a href="https://buymeacoffee.com/ketanmistry" target="_blank">buy me a coffee</a>).</p>
+            </div>
+          </details>
+
           <details>
             <summary>Is Taillour pre-styled?</summary>
             <div class="rte">
-              <p>Taillour has very basic black and white styling and is not meant to be used like this out-of-the-box.</p>
+              <p>Taillour has very basic black and white styling and is <strong>not</strong> meant to be used like this out-of-the-box.</p>
             </div>
           </details>
 
