--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="stylesheet" href="assets/mobile.css" media="(max-width: 768px)">
-  <script src="assets/theme.js"></script>
 
   <script defer data-domain="taillourtheme.com" src="https://plausible.io/js/script.js"></script>
 </head>
@@ -24,11 +23,7 @@
 
   <header class="fill">
     <div class="container">
-      <div id="btn-menu" class="flex middle">
-        <div data-device="mobile">
-          <button type="button" onclick="toggleNav();">Menu</button>
-        </div>
-      </div>
+      <div id="btn-menu" class="flex middle"></div>
       <div id="logo" class="flex align-center middle">
         <a href="/">
           <svg width="170" height="77" viewBox="0 0 427 193" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -456,7 +451,7 @@
             <div class="rte">
               <p>👋🏽 I'm Ketan, a British <a href="https://iamketan.design" target="_blank">Ecommerce Consultant</a> living in Queensland, Australia.</p>
               <p>I built Taillour to make things easier for myself when building stores for my clients.</p>
-              <p>I've made Taillour available to everyone, and if you've found it helpful, please do let me know (or <a href="https://buymeacoffee.com/ketanmistry" target="_blank">buy me a coffee</a>).</p>
+              <p>I've made Taillour available to everyone, and if you've found it helpful, please do let me know (or <a href="https://buymeacoffee.com/ketanmistry" target="_blank">buy me a coffee</a> to show your support 🙂).</p>
             </div>
           </details>
 
