--- a/index.html
+++ b/index.html
@@ -449,9 +449,10 @@
           <details open>
             <summary>Who made this?</summary>
             <div class="rte">
-              <p>👋🏽 I'm Ketan, a British <a href="https://iamketan.design" target="_blank">Ecommerce Consultant</a> living in Queensland, Australia.</p>
-              <p>I built Taillour to make things easier for myself when building stores for my clients.</p>
-              <p>I've made Taillour available to everyone, and if you've found it helpful, please do let me know (or <a href="https://buymeacoffee.com/ketanmistry" target="_blank">buy me a coffee</a> to show your support 🙂).</p>
+              <p>👋🏽 I'm Ketan, a British <a href="https://iamketan.design" target="_blank">Ecommerce Consultant</a> living in Queensland, Australia. I've been building websites and stores for clients for over 25 years.</p>
+              <p>I created Taillour to make things easier for myself when building stores for my clients, and have now made it available to everyone &mdash; I'm coming across more and more developers who just want something simple but flexible to start from.</p>
+              <p>If you've found it helpful, please do let me know, or <a href="https://buymeacoffee.com/ketanmistry" target="_blank">buy me a coffee</a> to show your support 🙂).</p>
+              <p>I'll be adding more updates to it over the coming months.</p>
             </div>
           </details>
 
