--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="stylesheet" href="assets/mobile.css" media="(max-width: 768px)">
 
-  <script defer data-domain="taillourtheme.com" src="https://plausible.io/js/script.js"></script>
+  <script defer data-domain="taillourtheme.com" src="https://plausible.io/js/script.outbound-links.pageview-props.tagged-events.js"></script>
+  <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </head>
 
 <body>
