--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <div class="rte">
               <p>👋🏽 I'm Ketan, a British <a href="https://iamketan.design" target="_blank">Ecommerce Consultant</a> living in Queensland, Australia. I've been building websites and stores for clients for over 25 years.</p>
               <p>I created Taillour to make things easier for myself when building stores for my clients, and have now made it available to everyone &mdash; I'm coming across more and more developers who just want something simple but flexible to start from.</p>
-              <p>If you've found it helpful, please do let me know, or <a href="https://buymeacoffee.com/ketanmistry" target="_blank">buy me a coffee</a> to show your support 🙂).</p>
+              <p>If you've found it helpful, please do let me know, or <a href="https://buymeacoffee.com/ketanmistry" target="_blank">buy me a coffee</a> to show it was useful 🙂).</p>
               <p>I'll be adding more updates to it over the coming months.</p>
             </div>
           </details>
